// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownPanel component should match snapshot 1`] = `
<Row
  gutter={0}
>
  <Col
    className="dropdownCol"
    span={24}
  >
    <div>
      Staring Commit
    </div>
    <Select
      bordered={true}
      choiceTransitionName="zoom"
      className="dropdownSelect"
      onSelect={[MockFunction]}
      size="middle"
      transitionName="slide-up"
      value="a"
    >
      <Option
        key="option-0"
        value="a"
      >
        a
      </Option>
      <Option
        key="option-1"
        value="b"
      >
        b
      </Option>
      <Option
        key="option-2"
        value="c"
      >
        c
      </Option>
      <Option
        key="option-3"
        value="d"
      >
        d
      </Option>
      <Option
        key="option-4"
        value="e"
      >
        e
      </Option>
    </Select>
  </Col>
  <Col
    className="dropdownCol"
    span={24}
  >
    <div>
      Ending Commit
    </div>
    <Select
      bordered={true}
      choiceTransitionName="zoom"
      className="dropdownSelect"
      onSelect={[MockFunction]}
      size="middle"
      transitionName="slide-up"
      value="f"
    >
      <Option
        key="option-0"
        value="b"
      >
        b
      </Option>
      <Option
        key="option-1"
        value="c"
      >
        c
      </Option>
      <Option
        key="option-2"
        value="d"
      >
        d
      </Option>
      <Option
        key="option-3"
        value="e"
      >
        e
      </Option>
      <Option
        key="option-4"
        value="f"
      >
        f
      </Option>
    </Select>
  </Col>
</Row>
`;

exports[`DropdownPanel component should match snapshot with correct options 1`] = `
<Row
  gutter={0}
>
  <Col
    className="dropdownCol"
    span={24}
  >
    <div>
      Staring Commit
    </div>
    <Select
      bordered={true}
      choiceTransitionName="zoom"
      className="dropdownSelect"
      onSelect={[MockFunction]}
      size="middle"
      transitionName="slide-up"
      value="b"
    >
      <Option
        key="option-0"
        value="a"
      >
        a
      </Option>
      <Option
        key="option-1"
        value="b"
      >
        b
      </Option>
      <Option
        key="option-2"
        value="c"
      >
        c
      </Option>
    </Select>
  </Col>
  <Col
    className="dropdownCol"
    span={24}
  >
    <div>
      Ending Commit
    </div>
    <Select
      bordered={true}
      choiceTransitionName="zoom"
      className="dropdownSelect"
      onSelect={[MockFunction]}
      size="middle"
      transitionName="slide-up"
      value="d"
    >
      <Option
        key="option-0"
        value="c"
      >
        c
      </Option>
      <Option
        key="option-1"
        value="d"
      >
        d
      </Option>
      <Option
        key="option-2"
        value="e"
      >
        e
      </Option>
      <Option
        key="option-3"
        value="f"
      >
        f
      </Option>
    </Select>
  </Col>
</Row>
`;
